--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "postinstall": "node -e \"console.log('Razorpay will be loaded via CDN')\"",
     "start": "next start"
   },
+  
   "dependencies": {
     "@eslint/js": "latest",
     "@hookform/resolvers": "^3.10.0",
@@ -59,6 +61,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "razorpay": "^2.9.6",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
